--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "tp4",
   "version": "1.0.0",
-  "description": "arrancando tp4",
+  "description": "segunda clase",
   "main": "index.js",
-  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Matias Wilder",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "country-to-currency": "^2.0.2"
+  }
 }
